--- a/style.css
+++ b/style.css
@@ -189,6 +189,6 @@
             }
         }
         #avik_name{ 
-            color:white;
+            color:rgb(61, 158, 17);
         }
     </style>
