--- a/code/style.css
+++ b/code/style.css
@@ -22,7 +22,7 @@
         .hero {
             background: 
                 linear-gradient(rgba(188, 243, 243, 0.3), rgba(109, 96, 96, 0.3)),
-                url('https://thumbs.dreamstime.com/z/house-under-construction-blueprints-building-project-53360048.jpg?ct=jpeg');
+                url('474.JPG');
             background-position: center;
             background-size: cover;
             height: 100vh;
