--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary: #2A5C82;
-    --secondary: #3AB795;
+    --secondary: #d1e7e1;
     --dark: #1A2E40;
     --light: #F5F9FC;
 }
